welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: not found: type hauteur
def colonne(decalage:Int, hauteur:Int, motif:Array[hauteur]) {
                                                   ^